// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots modul-components|m-slide-transition Tabs example 1`] = `
<div>
  <div
    class="m-navbar m--is-skin-tab-light m--is-multiline"
  >
    <div
      class="m-auto-horizontal-scroll m-navbar__wrap m--is-gradient-style-white"
      style="max-width: 1200px;"
    >
      <!---->
       
      <!---->
       
      <div
        class="m-auto-horizontal-scroll__body"
      >
        <div
          class="m-auto-horizontal-scroll__body-content"
          style="min-width: 100px;"
        >
          <ul
            class="m-navbar__list"
          >
            <li
              class="m-navbar-item"
            >
              <div
                class="m-navbar-item__contents"
                style="white-space: nowrap;"
                tabindex="0"
              >
                <div
                  class="m-navbar-item__text"
                >
                  <!---->
                   
                  <div>
                    
                    Tab 1
                
                  </div>
                   
                  <!---->
                </div>
              </div>
            </li>
            <li
              class="m-navbar-item"
            >
              <div
                class="m-navbar-item__contents"
                style="white-space: nowrap;"
                tabindex="0"
              >
                <div
                  class="m-navbar-item__text"
                >
                  <!---->
                   
                  <div>
                    
                    Tab 2
                
                  </div>
                   
                  <!---->
                </div>
              </div>
            </li>
            <li
              class="m-navbar-item"
            >
              <div
                class="m-navbar-item__contents"
                style="white-space: nowrap;"
                tabindex="0"
              >
                <div
                  class="m-navbar-item__text"
                >
                  <!---->
                   
                  <div>
                    
                    Tab 3
                
                  </div>
                   
                  <!---->
                </div>
              </div>
            </li>
            <li
              class="m-navbar-item"
            >
              <div
                class="m-navbar-item__contents"
                style="white-space: nowrap;"
                tabindex="0"
              >
                <div
                  class="m-navbar-item__text"
                >
                  <!---->
                   
                  <div>
                    
                    Tab 4
                
                  </div>
                   
                  <!---->
                </div>
              </div>
            </li>
            <li
              class="m-navbar-item"
            >
              <div
                class="m-navbar-item__contents"
                style="white-space: nowrap;"
                tabindex="0"
              >
                <div
                  class="m-navbar-item__text"
                >
                  <!---->
                   
                  <div>
                    
                    Tab 5
                
                  </div>
                   
                  <!---->
                </div>
              </div>
            </li>
            <li
              class="m-navbar-item"
            >
              <div
                class="m-navbar-item__contents"
                style="white-space: nowrap;"
                tabindex="0"
              >
                <div
                  class="m-navbar-item__text"
                >
                  <!---->
                   
                  <div>
                    
                    Tab 6
                
                  </div>
                   
                  <!---->
                </div>
              </div>
            </li>
            <li
              class="m-navbar-item"
            >
              <div
                class="m-navbar-item__contents"
                style="white-space: nowrap;"
                tabindex="0"
              >
                <div
                  class="m-navbar-item__text"
                >
                  <!---->
                   
                  <div>
                    
                    Tab 7
                
                  </div>
                   
                  <!---->
                </div>
              </div>
            </li>
             
            <!---->
             
            <!---->
          </ul>
        </div>
      </div>
    </div>
  </div>
   
  <div
    class="m-slide-transition m--is-left-to-right-transition"
  >
    <div
      class="mu-mt"
    >
      <h3
        class="mu-no-m"
      >
        Tab 1
      </h3>
       
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
    </div>
  </div>
   
  <div
    class="mu-mt-md"
  >
    <button
      class="m-button m--is-skin-primary"
      type="button"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Add tab 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
     
    <button
      class="m-button mu-ml m--is-skin-secondary"
      type="button"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Delete tab 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
     
    <button
      class="m-button mu-ml m--is-skin-secondary"
      type="button"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Disabled transition 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
  </div>
   
  <!---->
</div>
`;

exports[`Storyshots modul-components|m-slide-transition automatic-scroll=false 1`] = `
<div>
  <div
    class="m-navbar m--is-skin-tab-light m--is-multiline"
  >
    <div
      class="m-auto-horizontal-scroll m-navbar__wrap m--is-gradient-style-white"
      style="max-width: 1200px;"
    >
      <!---->
       
      <!---->
       
      <div
        class="m-auto-horizontal-scroll__body"
      >
        <div
          class="m-auto-horizontal-scroll__body-content"
          style="min-width: 100px;"
        >
          <ul
            class="m-navbar__list"
          >
            <li
              class="m-navbar-item"
            >
              <div
                class="m-navbar-item__contents"
                style="white-space: nowrap;"
                tabindex="0"
              >
                <div
                  class="m-navbar-item__text"
                >
                  <!---->
                   
                  <div>
                    
                    Tab 1
                
                  </div>
                   
                  <!---->
                </div>
              </div>
            </li>
            <li
              class="m-navbar-item"
            >
              <div
                class="m-navbar-item__contents"
                style="white-space: nowrap;"
                tabindex="0"
              >
                <div
                  class="m-navbar-item__text"
                >
                  <!---->
                   
                  <div>
                    
                    Tab 2
                
                  </div>
                   
                  <!---->
                </div>
              </div>
            </li>
            <li
              class="m-navbar-item"
            >
              <div
                class="m-navbar-item__contents"
                style="white-space: nowrap;"
                tabindex="0"
              >
                <div
                  class="m-navbar-item__text"
                >
                  <!---->
                   
                  <div>
                    
                    Tab 3
                
                  </div>
                   
                  <!---->
                </div>
              </div>
            </li>
             
            <!---->
             
            <!---->
          </ul>
        </div>
      </div>
    </div>
  </div>
   
  <div
    class="m-slide-transition m--is-left-to-right-transition"
  >
    <div
      class="mu-mt"
    >
      <h3
        class="mu-no-m"
      >
        Tab 1
      </h3>
       
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
    </div>
  </div>
</div>
`;
